--- a/.github/workflows/maven-ci-cd.yml
+++ b/.github/workflows/maven-ci-cd.yml
@@ -2,11 +2,9 @@ name: Java CI/CD with Maven
 
 on:
   push:
-    branches: [ main ]
+    branches: [ master ]
   pull_request:
-    branches: [ main ]
-  release:
-    types: [created]
+    branches: [ master ]
 
 jobs:
   test:
@@ -31,41 +29,3 @@ jobs:
         with:
           name: test-results
           path: target/surefire-reports/
-
-  deploy:
-    name: Deploy to GitHub Packages
-    needs: test  # 依赖测试阶段
-    if: github.event_name == 'release'  # 仅发布时触发
-    runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
-
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Set up JDK 17
-        uses: actions/setup-java@v4
-        with:
-          java-version: '17'
-          distribution: 'temurin'
-          server-id: github  # 与pom.xml中的id对应
-
-      - name: Generate settings.xml
-        run: |
-          cat << EOF > settings.xml
-          <settings>
-            <servers>
-              <server>
-                <id>github</id>
-                <username>\${env.GITHUB_ACTOR}</username>
-                <password>\${env.GITHUB_TOKEN}</password>
-              </server>
-            </servers>
-          </settings>
-          EOF
-
-      - name: Build and Deploy
-        run: mvn -B deploy -s settings.xml
-        env:
-          GITHUB_TOKEN: ${{ github.token }}
